--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-group/layout/warehouse-group.component.html
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-group/layout/warehouse-group.component.html
@@ -9,7 +9,7 @@
         </div>
       </div>
 
-      <form *ngIf="upgradeName" [formGroup]="changeFormGroup" class="header">
+      <form *ngIf="upgradeName" [formGroup]="changeFormGroup" class="head__header">
         <mat-form-field class="example-full-width">
           <mat-label>Наименование</mat-label>
           <input type="text" formControlName="name" matInput placeholder="Введите наименование">
