--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-group/layout/warehouse-group.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-group/layout/warehouse-group.component.scss
@@ -25,6 +25,52 @@
     justify-content: center;
     align-items: center;
 
+    .head__header {
+      display: flex;
+      align-items: center;
+
+      .header__btn-save {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 5px;
+        width: 45px;
+        height: 45px;
+        border-radius: 50px;
+
+        img {
+          width: 45px;
+          height: 45px;
+        }
+      }
+
+
+      .example-full-width {
+        width: 380px;
+        height: 45px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+      }
+    }
+
+    .border {
+      margin-left: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 5px;
+      box-shadow: 0 0 5px 3px rgba(221, 221, 221, 1);
+      background-color: #f5f5f5;
+      cursor: pointer;
+      width: 45px;
+      height: 45px;
+
+      img {
+        width: 45px;
+        height: 45px;
+      }
+    }
+
 
     .head__header-name {
       padding: 5px;
