--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
@@ -13,6 +13,10 @@
   background-color: transparent;
 }
 
+.add-file {
+  display: none;
+}
+
 .wrapper {
   padding-top: 15px;
   width: 1440px;
@@ -114,15 +118,74 @@
     }
   }
 
+  .container-line {
+    display: flex;
+    width: 1440px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .adding-image {
+    margin-top: 15px;
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .btn-controll {
+      margin-top: 10px;
+      display: flex;
+      width: 100px;
+      justify-content: space-between;
+      button {
+        height: 25px;
+        width: 25px;
+      }
+    }
+    .btn__img-change {
+      box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+      margin-top: 10px;
+      width: 200px;
+      height: 45px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      border-radius: 5px;
+
+      img {
+        height: 40px;
+        width: 40px;
+      }
+    }
+  }
+
+  .image {
+    width: 625px;
+    height: 600px;
+    border: 1px solid black;
+    border-radius: 5px;
+
+    .image-line {
+      overflow-x: auto;
+      white-space: nowrap;
+
+      .content{
+        display: inline-block;
+      }
+    }
+  }
+
   .setting {
-    width: 1400px;
-    margin: 0 auto;
+    width: 625px;
     margin-top: 15px;
     background: rgba(164, 147, 67, 0.5);
+    height: 400px;
     border-radius: 5px;
-    padding: 20px;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     .setting__settings {
       box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, .5);
@@ -208,6 +271,7 @@
     }
 
     .setting__reliability {
+      margin-top: 20px;
       box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, .5);
       width: 500px;
       font-size: 32px;
