--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-sorting/modal-sorting.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/modal-sorting/modal-sorting.component.scss
@@ -12,7 +12,7 @@
     width: 500px;
     min-height: 180px;
     border-radius: 5px;
-    max-height: 400px;
+    max-height: 500px;
     display: flex;
     flex-direction: column;
 
@@ -44,54 +44,6 @@
       margin: 0 auto;
       font-size: 32px;
     }
-
-    .item-list__button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-left: 10px;
-      width: 30px;
-      height: 30px;
-      border-radius: 50px;
-
-      img {
-        width: 25px;
-        height: 25px;
-      }
-    }
-
-    .item-list__create {
-      margin-top: 5px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding-bottom: 5px;
-    }
-
-    .item-list {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 5px;
-
-      .item-list__flex {
-        display: flex;
-        align-items: center;
-      }
-
-      .item-list__item {
-        margin-bottom: 5px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 340px;
-        box-shadow: 0 0 5px 2px rgba(221, 221, 221, 1);
-        background-color: #f5f5f5;
-        border-radius: 5px;
-      }
-    }
   }
 }
 
@@ -115,23 +67,6 @@
   }
 }
 
-.border {
-  margin-left: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-  box-shadow: 0 0 5px 3px rgba(221, 221, 221, 1);
-  background-color: #f5f5f5;
-  cursor: pointer;
-  width: 35px;
-  height: 35px;
-
-  img {
-    width: 35px;
-    height: 35px;
-  }
-}
 
 .loading {
   margin: 0 auto;
@@ -148,11 +83,49 @@
   height: 25px;
 }
 
-.example-full-width {
-  margin-left: 10px;
-  box-shadow: 0 0 5px 2px rgba(221, 221, 221, 1);
-  width: 60px;
-  height: 45px;
-  border-radius: 5px;
+.example-list {
+  border: solid 1px #ccc;
+  min-height: 60px;
+  background: white;
+  border-radius: 4px;
+  overflow: auto;
+}
+
+.example-box {
+  padding: 20px 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
