--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -229,11 +229,11 @@ input.active {
   margin-bottom: 15px;
 }
 
-.slider {
-  width: 650px;
-  overflow: auto;
-  display: flex;
-}
+//.slider {
+//  width: 650px;
+//  overflow: auto;
+//  display: flex;
+//}
 
 .adding-img-model {
   width: 650px;
