--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-group/layout/warehouse-group.component.html
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-group/layout/warehouse-group.component.html
@@ -26,6 +26,7 @@
         </mat-form-field>
       </div>
       <div class="head__btns">
+        <button mat-raised-button color="accent" class="btn-back" (click)="btnBack()"><img src="../../../../../../../assets/img/back.png" alt="">Назад</button>
         <button mat-raised-button color="accent" class="head__btn" (click)="btnOpenModal()">Добавить</button>
         <button class="head__btn" mat-raised-button color="accent">Показать отсуствующие</button>
       </div>
