--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
@@ -127,8 +127,7 @@
 
   .adding-image {
     margin-top: 15px;
-    height: fit-content;
-
+    height: 900px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -161,23 +160,26 @@
   }
 
   .image {
-    width: 625px;
-    height: 600px;
+    width: 650px;
+    height: 850px;
     border: 1px solid black;
     border-radius: 5px;
 
-    .image-line {
-      overflow-x: auto;
-      white-space: nowrap;
 
-      .content{
-        display: inline-block;
-      }
-    }
+  }
+
+  .image-line {
+    overflow-x: auto;
+    white-space: nowrap;
+    //height: 600px;
+  }
+
+  .content{
+    display: inline-block;
   }
 
   .setting {
-    width: 625px;
+    width: 650px;
     margin-top: 15px;
     background: rgba(164, 147, 67, 0.5);
     height: 400px;
