--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.html
@@ -5,21 +5,24 @@
     <button mat-raised-button color="accent" (click)="openSettings(position.equipment_id)" class="setting">Редактировать модель</button>
     <button mat-raised-button color="warn" (click)="btnDelete(position.id)" class="setting">Удалить</button>
   </mat-menu>
-  <div class="image-model-equipment">
-    <img [src]="position.image" alt="" *ngIf="pdfStrModel == false && docx == false">
-    <div class="container" *ngIf="pdfStrModel">
-      <pdf-viewer [src]="position.image"
-                  [original-size]="false"
-      ></pdf-viewer>
-    </div>
-    <div *ngIf="docx" class="render" #render></div>
 
-  </div>
-  <div matTooltip="Наименование модели" class="name-model-equipment">
-    <span>{{position.equipment_name}}</span>
-  </div>
-  <div matTooltip="Позиция" class="name-model-equipment mt5px">
-    <span>{{position.position}}</span>
+  <div (click)="openEquipmentPosition(position.id)">
+    <div class="image-model-equipment">
+      <img [src]="position.image" alt="" *ngIf="pdfStrModel == false && docx == false">
+      <div class="container" *ngIf="pdfStrModel">
+        <pdf-viewer [src]="position.image"
+                    [original-size]="false"
+        ></pdf-viewer>
+      </div>
+      <div *ngIf="docx" class="render" #render></div>
+
+    </div>
+    <div matTooltip="Наименование модели" class="name-model-equipment">
+      <span>{{position.equipment_name}}</span>
+    </div>
+    <div matTooltip="Позиция" class="name-model-equipment mt5px">
+      <span>{{position.position}}</span>
+    </div>
   </div>
 </div>
 
