--- a/CHSZiK/src/app/main/pages/equipment-position/layout/equipment-position.component.scss
+++ b/CHSZiK/src/app/main/pages/equipment-position/layout/equipment-position.component.scss
@@ -307,13 +307,24 @@ input.active {
 }
 
 .head__name {
-  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
-  background-color: #f5f5f5;
-  font-size: 32px;
-  text-align: center;
-  border-radius: 5px;
-  margin: 0 auto;
-  padding: 5px;
+  //box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  //background-color: #f5f5f5;
+  //font-size: 32px;
+  //text-align: center;
+  //border-radius: 5px;
+  ////margin: 0 auto;
+  //padding: 5px;
+}
+
+.head__position {
+  //box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  //background-color: #f5f5f5;
+  //font-size: 32px;
+  //text-align: center;
+  //border-radius: 5px;
+  ////margin: 0 auto;
+  //padding: 5px;
+  margin-left: 15px;
 }
 
 .example-full-width {
@@ -345,6 +356,14 @@ input.active {
   align-items: center;
   display: flex;
   justify-self: center;
+
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
+  font-size: 32px;
+  text-align: center;
+  border-radius: 5px;
+  //margin: 0 auto;
+  padding: 5px;
 }
 
 .save {
