--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -236,6 +236,7 @@ input.active {
 //}
 
 .adding-img-model {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   width: 650px;
   height: 850px;
   border: 1px solid black;
