--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-group/layout/warehouse-group.component.html
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-group/layout/warehouse-group.component.html
@@ -39,7 +39,7 @@
             <div class="item item__price" matTooltip="Цена">{{typeSpareParts.price}}</div>
             <div class="item item__manufacturer" matTooltip="Производитель">{{typeSpareParts.manufacturer}}</div>
             <div class="item item-quantity">
-              <div class="item-quantity__number" matTooltip="Колличество">{{typeSpareParts.quantity}}</div>
+              <div class="item-quantity__number" matTooltip="Количество">{{typeSpareParts.quantity}}</div>
               <div class="item-quantity__measurement" matTooltip="Измерение">{{typeSpareParts.measurement_units}}</div>
             </div>
           </div>
