--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.html
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.html
@@ -19,7 +19,7 @@
           <img src="../../../../../../../assets/img/done.png" alt="">
         </button>
       </form>
-      <div class="head__quantity"><div class="head__quantity-item"><span>Всего: </span><span matTooltip="Колличество">{{typeSparePart.quantity}} </span><span matTooltip="Измерение">{{typeSparePart.measurement_units}}</span></div></div>
+      <div class="head__quantity"><div class="head__quantity-item"><span>Всего: </span><span matTooltip="Количество">{{typeSparePart.quantity}} </span><span matTooltip="Измерение">{{typeSparePart.measurement_units}}</span></div></div>
 
     </div>
 
