--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
@@ -160,6 +160,7 @@
   }
 
   .image {
+    box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
     width: 650px;
     height: 850px;
     border: 1px solid black;
