--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/components/maintenance-sheet-editing/layout/maintenance-sheet-editing.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/components/maintenance-sheet-editing/layout/maintenance-sheet-editing.component.scss
@@ -3,6 +3,11 @@
   margin: 0;
 }
 
+.loading {
+  top: 150px;
+  margin: 0 auto;
+}
+
 .wrapper {
   width: 1440px;
   margin: 0 auto;
@@ -19,40 +24,50 @@
 }
 
 .header {
-  font-size: 32px;
   justify-self: center;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
+  font-size: 32px;
+  text-align: center;
+  border-radius: 5px;
+  margin: 0 auto;
+  padding: 5px;
+
 }
 
 .btn-back {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   width: 133px;
   height: 55px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
   border-radius: 5px;
 
-
-  .img-back {
-    width: 50px;
-    height: 50px;
+  img {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
   }
 }
 
+.example-full-width {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  height: 45px;
+  border-radius: 5px;
+}
 
 .container {
   margin: 0 auto;
   background-color: rgba(164, 147, 67, 0.5);
-  border-radius: 25px;
+  border-radius: 5px;
   padding-bottom: 15px;
+  margin-top: 15px;
 }
 
 .list {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
 }
 
 .list__item {
@@ -73,7 +88,7 @@
 }
 
 .list-documentation__item {
-  width: 1370px;
+  width: 650px;
   background-color: white;
   border-radius: 5px;
   padding-bottom: 10px;
@@ -103,10 +118,6 @@
   margin-right: 10px;
 }
 
-.item__content input {
-
-}
-
 .border {
   border: 1px solid black;
 }
@@ -119,24 +130,72 @@
 }
 
 .save__btn{
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   width: 230px;
   height: 50px;
   border: none;
-  background-color: #E3B800;
-  border: 3px solid #A49343;
+  font-size: 16px;
   border-radius: 25px;
+}
+
+.btn-save-component {
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.border-delete {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
+  cursor: pointer;
+  width: 45px;
+  height: 45px;
+
+  img {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .item {
   margin-top: 10px;
   display: flex;
-  background-color: #D9D9D9;
-  border-radius: 25px;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
+  border-radius: 5px;
   width: 635px;
   height: 50px;
   align-items: center;
   font-size: 16px;
   justify-content: space-around;
+
+  .item-component {
+    display: flex;
+    align-items: center;
+    height: 35px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+    padding: 5px;
+  }
+
+  .item-name {
+    width: 360px;
+  }
+
+  .item-quantity {
+    width: 110px;
+  }
 }
 
 .item__header {
@@ -151,34 +210,11 @@
 }
 
 .item__input-name {
-  width: 270px;
-  height: 40px;
-  border-radius: 5px;
+  width: 370px;
 }
 
 .item__input-quantity {
   width: 120px;
-  height: 40px;
-  border-radius: 5px;
-}
-
-.btn__save-item {
-  margin-left: 5px;
-}
-.btn-save-component {
-  width: 45px;
-  height: 45px;
-  border-radius: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
-
-  .img-apply {
-    width: 35px;
-    height: 35px;
-  }
 }
 
 .btn-delete-component {
@@ -194,18 +230,3 @@
     height: 35px;
   }
 }
-button {
-  transition: 0.15s linear;
-}
-button:hover {
-  font-size: 17px;
-  transition: 0.15s linear;
-  background: #A49343;
-  border: 3px solid #E3B800;
-}
-button:active {
-  font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
-}
-
