--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/maintenance-sheet-editing/layout/maintenance-sheet-editing.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/maintenance-sheet-editing/layout/maintenance-sheet-editing.component.scss
@@ -59,15 +59,19 @@
 
 .container {
   margin: 0 auto;
-  background-color: rgba(164, 147, 67, 0.5);
-  border-radius: 5px;
-  padding-bottom: 15px;
   margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+
 }
 
 .list {
+  width: 650px;
+  border-radius: 5px;
+  background-color: rgba(164, 147, 67, 0.5);
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  padding-bottom: 15px;
 }
 
 .list__item {
@@ -77,45 +81,68 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 650px;
+  width: 610px;
   padding-bottom: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background-color: transparent;
 }
 
 .list-documentation {
-  padding-top: 20px;
+  height: 900px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.add-file {
+  display: none;
 }
 
 .list-documentation__item {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   width: 650px;
-  background-color: white;
+  height: 850px;
+  border: 1px solid black;
   border-radius: 5px;
-  padding-bottom: 10px;
 }
 
-.list-documentation__header {
-  font-size: 32px;
-  display: flex;
-  justify-content: center;
+.list-documentation__line {
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
-.list-documentation__content {
-  font-size: 16px;
+.content {
+  display: inline-block;
+}
+
+.btn-controll {
   margin-top: 10px;
   display: flex;
+  width: 100px;
+  justify-content: space-between;
+  button {
+    height: 25px;
+    width: 25px;
+  }
 }
 
-.item__content {
-  background-color: #D9D9D9;
-  border-radius: 5px;
-  width: 340px;
-  height: 50px;
+.btn__img-change {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  margin-top: 10px;
+  width: 200px;
+  height: 45px;
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  margin-left: 10px;
-  margin-right: 10px;
+  border-radius: 5px;
+
+  img {
+    height: 40px;
+    width: 40px;
+  }
 }
 
 .border {
@@ -174,7 +201,7 @@
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   background-color: #f5f5f5;
   border-radius: 5px;
-  width: 635px;
+  width: 590px;
   height: 50px;
   align-items: center;
   font-size: 16px;
